Interns-HUB/Training Compliance & Certification Tracking System Project/force-app/main/default/objects/Employee_Training__c/Employee_Training__c.object-meta.xml
<CustomObject>
    <label>Employee Training</label>
    <nameField>
        <label>Employee Training Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employee Trainings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>