Interns-HUB/Training Compliance & Certification Tracking System Project/force-app/main/default/objects/Employee_Training__c/fields/Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Completion_Date__c</fullName>
    <description>When training was completed</description>
    <label>Completion Date</label>
    <type>Date</type>
</CustomField>