Interns-HUB/Training Compliance & Certification Tracking System Project/force-app/main/default/objects/Employee_Training__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Employee who completed the training</description>
    <label>Employee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Employee_Trainings</relationshipName>
    <type>Lookup</type>
</CustomField>