Interns-HUB/Training Compliance & Certification Tracking System Project/force-app/main/default/objects/Employee_Training__c/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <description>Automatically calculated from module</description>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>