Interns-HUB/Training Compliance & Certification Tracking System Project/force-app/main/default/objects/Employee_Training__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Upcoming</fullName>
            </value>
            <value>
                <fullName>Revoked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>