Interns-HUB/Training Compliance & Certification Tracking System Project/force-app/main/default/objects/Employee_Training__c/fields/Training_Module__c.field-meta.xml
<CustomField>
    <fullName>Training_Module__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Training Module</label>
    <referenceTo>Training_Module__c</referenceTo>
    <relationshipLabel>Employee Trainings</relationshipLabel>
    <relationshipName>Employee_Trainings</relationshipName>
    <type>Lookup</type>
</CustomField>